checked database changes and checked fro joins as well , reformatted code and optimized imports